--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 
 
-<title>About me</title>
+<title>About Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -385,12 +385,12 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About me</h1>
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
 
-<p>My name is Alison and I make websites!!</p>
+<p>Here’s where I put more info about me</p>
 
 
 
